--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 :root {
-  --color-admin: #2bdc9b;
+  --color-admin: #f48c06;
   --accent-info: #00a1ff;
   --accent-success: #21c389;
   --accent-warning: #e7a241;
